[package]
authors = ["Stefano Ariotta sqrtstefano@gmail.com"]
name = "chip-8-core"
version = "0.9.0"
edition = "2021"

[features]
default = []

no-std = ["compiletime-compat"]

# opcodes compatibility options will be determined at compile time
compiletime-compat = []

# option: SCHIP-compatible bitshifts and load/store operations
variant-opcodes = ["compiletime-compat"]

# option: draw clipping sprites instead of wrapping around (see `Chip8::display()` documentation)
sprite-clipping = ["compiletime-compat"]

